Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80332

qwinrtmediaplayercontrol.cpp(302): error C2039: 'resources': is not a member of 'QMediaContent'

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P0: Blocker
    • 6.0
    • 6.0
    • Multimedia
    • None
    • WinRT
    • bb64e9df20003d705820544f55b081d22bd62878 (qt/qtmultimedia/dev)

    Description

      https://codereview.qt-project.org/c/qt/qt5/+/282399 Merge remote-tracking branch 'origin/5.15' into dev
      https://codereview.qt-project.org/c/qt/qt5/+/282587/ Update submodules on 'dev' in qt/qt5

      http://coin/coin/integration/qt/qt5/tasks/web_rescheduled_qt_qt5_1574753666871

      http://coin/coin/api/results/qt/qtmultimedia/a3e60c1d4b3831e45b08af59298b3f1558b5a15d/WindowsWindows_10x86_64WinRTWinRT_10x86_64MSVC2015qtci-windows-10-x86_64-15-d655f6DisableTests/24197b023991bc43c86b8cc63f497373b9ec87da/build_1574754580/log.txt.gz

      agent:2019/11/26 08:22:42 build.go:220: qwinrtmediaplayercontrol.cpp(302): error C2039: 'resources': is not a member of 'QMediaContent'
      agent:2019/11/26 08:22:42 build.go:220: c:\users\qt\work\qt\qtmultimedia\include\qtmultimedia\../../src/multimedia/playback/qmediacontent.h(55): note: see declaration of 'QMediaContent'
      agent:2019/11/26 08:22:42 build.go:220: qwinrtmediaplayercontrol.cpp(302): error C2228: left of '.length' must have class/struct/union
      agent:2019/11/26 08:22:42 build.go:220: qwinrtmediaplayercontrol.cpp(307): error C2039: 'resources': is not a member of 'QMediaContent'
      agent:2019/11/26 08:22:42 build.go:220: c:\users\qt\work\qt\qtmultimedia\include\qtmultimedia\../../src/multimedia/playback/qmediacontent.h(55): note: see declaration of 'QMediaContent'
      agent:2019/11/26 08:22:42 build.go:220: qwinrtmediaplayercontrol.cpp(307): error C2228: left of '.value' must have class/struct/union
      agent:2019/11/26 08:22:42 build.go:220: qwinrtmediaplayercontrol.cpp(307): error C2228: left of '.url' must have class/struct/union
      agent:2019/11/26 08:22:42 build.go:220: qwinrtmediaplayercontrol.cpp(307): error C2228: left of '.toString' must have class/struct/union
      agent:2019/11/26 08:22:42 build.go:220: qwinrtmediaplayercontrol.cpp(314): error C2039: 'resources': is not a member of 'QMediaContent'
      agent:2019/11/26 08:22:42 build.go:220: c:\users\qt\work\qt\qtmultimedia\include\qtmultimedia\../../src/multimedia/playback/qmediacontent.h(55): note: see declaration of 'QMediaContent'
      agent:2019/11/26 08:22:42 build.go:220: qwinrtmediaplayercontrol.cpp(314): error C2228: left of '.value' must have class/struct/union
      agent:2019/11/26 08:22:42 build.go:220: qwinrtmediaplayercontrol.cpp(314): error C2228: left of '.mimeType' must have class/struct/union
      agent:2019/11/26 08:22:42 build.go:220: qwinrtmediaplayerservice.cpp
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes