WinRT: Remove usage of deprecated QMediaResource

Change-Id: Ib45bf19f931909761e1bfea005cff3988be48b1a
Fixes: QTBUG-80332
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Liang Qi <liang.qi@qt.io>